--- a/web/template/blog/layouts/layout.tmpl
+++ b/web/template/blog/layouts/layout.tmpl
@@ -7,14 +7,14 @@
     <meta name="keywords" content="" />
     <meta name="description" content="" />
     <link rel="icon" href="/static/favicon.ico">
-    <link rel="stylesheet" href="/static/css/style.css">
+    <link rel="stylesheet" href="/static/css/style.css?v=20210318">
 </head>
 <body class="layout">
     {{ template "header" . }}
 
-    <div class="container">
+    <div class="layout-container">
         {{ template "content" . }}
-        <!--<div class="information">right</div>-->
+        <!--<div class="layout-container-information">right</div>-->
     </div>
 
     {{ template "footer" .}}
