--- a/web/template/blog/layouts/m_header.tmpl
+++ b/web/template/blog/layouts/m_header.tmpl
@@ -1,10 +1,10 @@
 {{ define "header" }}
 
-<div class="header">
+<div class="layout-header">
     <div class="header-box">
         <div class="logo">
             <img src="/static/images/logo.png" alt="">
-            <h1>XXXX</h1>
+            <h1>Share</h1>
         </div>
         <div class="topic">
             <div>category1</div>
