--- a/web/template/blog/views/home.tmpl
+++ b/web/template/blog/views/home.tmpl
@@ -1,17 +1,26 @@
 {{ define "content" }}
 
 <div class="layout-container-content">
-    {{ range .articles}}
-        <div>{{ .Title }}</div>
-        <div>
-            <div>{{ .PublishedAt }}</div>
-{{/*            <div>{{ .Tags }}</div>*/}}
-            <div>{{ .View }}</div>
-        </div>
-        <div>{{ .Description }}</div>
-    {{ end }}
+    <div class="article-container">
+        {{ range .articles}}
+        <a class="article-item" href="" target="_self">
+            <div class="article-item-title">{{ .Title }}</div>
+            <div class="article-item-info">
+                <div><img src="/static/images/date.svg">{{ unixToFormat .PublishedAt "2006-01-02 15:04" }}</div>
+                <div><img src="/static/images/eye.svg">{{ .View }}</div>
+                <div><img src="/static/images/tag.svg"> {{ implode .Tags "、" }}
+                </div>
+            </div>
+            <div class="article-item-desc">{{ .Description }}</div>
+        </a>
+        {{ end }}
+    </div>
+
+
+    {{/*            <div>{{ .Tags }}</div>*/}}
     {{ .total }}
     {{ .page }}
     {{ .pageSize }}
 </div>
+
 {{ end }}
