--- a/web/template/blog/layouts/m_footer.tmpl
+++ b/web/template/blog/layouts/m_footer.tmpl
@@ -1,7 +1,7 @@
 {{ define "footer" }}
 
 <div class="layout-footer">
-    <p>Copyright©2021 XXXX</p>
+    <p>Copyright©2021 wwc</p>
 </div>
 
 {{ end }}
