--- a/web/static/css/toastui-editor-viewer.css
+++ b/web/static/css/toastui-editor-viewer.css
@@ -9,8 +9,7 @@
   margin: 0;
   padding: 0;
   font-size: 13px;
-  font-family: 'Open Sans', 'Helvetica Neue', 'Helvetica', 'Arial', '나눔바른고딕',
-    'Nanum Barun Gothic', '맑은고딕', 'Malgun Gothic', sans-serif;
+  font-family: 'Arial', 'Microsoft YaHei', '黑体', '宋体', sans-serif;
 }
 
 .tui-editor-contents *:not(table) {
